<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.createReport.SendPhotosFragment">


    <ImageView
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:text="@string/add_photos_with_nice_rakurs"
        android:textColor="@color/main"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_back" />

    <View
        android:id="@+id/view_horizontal"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/grey_date"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/view_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_front_part"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tv_right_part"
        style="@style/TEXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/right_part_of_car_short"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_back_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_horizontal"
        app:layout_constraintTop_toTopOf="@+id/tv_back_part" />

    <ImageView
        android:id="@+id/iv_back_part"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="4dp"
        android:contentDescription="@string/back_part_of_car"
        android:src="@drawable/back_parts_car"
        app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_right_part" />

    <TextView
        android:id="@+id/tv_back_part"
        style="@style/TEXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/back_part_of_car_short"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/view_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_left" />

    <ImageView
        android:id="@+id/iv_right_part"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/right_part_of_car"
        android:src="@drawable/right_left_parts_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_back_part" />

    <TextView
        android:id="@+id/tv_left_part"
        style="@style/TEXT"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/left_part_of_car_short"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_front_part"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/view_horizontal"
        app:layout_constraintTop_toTopOf="@+id/tv_front_part"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_front_part"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/front_part_of_car"
        android:rotationY="-180"
        android:src="@drawable/front_parts_car"
        app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_part" />


    <View
        android:id="@+id/view_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_left_part" />


    <TextView
        android:id="@+id/tv_front_part"
        style="@style/TEXT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/front_part_of_car_short"
        android:textSize="16sp"
        android:textStyle="normal"

        app:layout_constraintEnd_toStartOf="@+id/view_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description_top" />

    <ImageView
        android:id="@+id/iv_left_part"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/left_part_of_car"
        android:rotationY="-180"
        android:src="@drawable/right_left_parts_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_front_part" />

    <View
        android:id="@+id/view_front"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_front_part" />

    <View
        android:id="@+id/view_back"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/grey_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back_part" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/mulish"
        android:paddingVertical="12dp"
        android:textColor="@color/white"
        android:text="@string/Send"
        android:textAllCaps="false"
        android:enabled="false"
        android:textSize="18sp"
        app:cornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>