<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".main.ReportFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_right_part"
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/right_part_of_car"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back_part" />

        <ImageView
            android:id="@+id/iv_right_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/left_part_of_car"
            android:src="@drawable/example_car_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
            app:layout_constraintStart_toStartOf="@+id/tv_front_part"
            app:layout_constraintTop_toBottomOf="@+id/tv_right_part"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_back_part"
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/back_part_of_car"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_left_part" />

        <ImageView
            android:id="@+id/iv_back_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/left_part_of_car"
            android:src="@drawable/example_car_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
            app:layout_constraintStart_toStartOf="@+id/tv_front_part"
            app:layout_constraintTop_toBottomOf="@+id/tv_back_part" />

        <TextView
            android:id="@+id/tv_left_part"
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/left_part_of_car"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_front_part" />

        <ImageView
            android:id="@+id/iv_left_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/left_part_of_car"
            android:src="@drawable/example_car_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
            app:layout_constraintStart_toStartOf="@+id/tv_front_part"
            app:layout_constraintTop_toBottomOf="@+id/tv_left_part" />

        <ImageView
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_main"
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/report_about_find_off"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ib_back"
            app:layout_constraintTop_toTopOf="@+id/ib_back"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_title_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/mulish"
            android:text="20.05.2024"
            android:textColor="@color/grey_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ib_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ib_back"
            app:layout_constraintTop_toBottomOf="@id/tv_title_main" />


        <TextView
            android:id="@+id/tv_front_part"
            style="@style/TEXT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/front_part_of_car"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_date" />

        <ImageView
            android:id="@+id/iv_front_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/front_part_of_car"
            android:src="@drawable/example_car_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_front_part"
            app:layout_constraintStart_toStartOf="@+id/tv_front_part"
            app:layout_constraintTop_toBottomOf="@+id/tv_front_part" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>